--- a/backend/to-do-list/src/main/resources/application.properties
+++ b/backend/to-do-list/src/main/resources/application.properties
@@ -1,4 +1,9 @@
-spring.datasource.url=jdbc:sqlite:D:/DB.Browser.for.SQLite-3.12.2-win64/databases/toDoDB/toDo_DB.db
-spring.datasource.driver-class-name=org.sqlite.JDBC
-spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
-spring.jpa.show-sql=true
+server.port=8080
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/todo-v2
+spring.datasource.username=postgres
+spring.datasource.password=12345
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=create-drop
