--- a/backend/to-do-list/pom.xml
+++ b/backend/to-do-list/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.furkan</groupId>
 	<artifactId>to-do-list</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>AuthenticatedBackend</name>
+	<name>to-do-list</name>
 	<description>Spring Boot, Spring Security, authenticated backend</description>
 	<properties>
 		<java.version>17</java.version>
