--- a/backend/to-do-list/src/main/resources/application.properties
+++ b/backend/to-do-list/src/main/resources/application.properties
@@ -5,5 +5,15 @@ spring.datasource.username=postgres
 spring.datasource.password=12345
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.show-sql=false
+#logging.level.org.springframework=DEBUG
+
+#spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+#openai.model=gpt-3.5-turbo
+#openai.api.url=https://api.openai.com/v1/chat/completions
+#openai.apiKey=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
+#openai.api.key=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
+
+youtube.api.key=AIzaSyBbC33vAfwUnUjY2ebMzWweV_27hvpJ3tk
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
