--- a/backend/to-do-list/src/main/resources/application.properties
+++ b/backend/to-do-list/src/main/resources/application.properties
@@ -8,14 +8,10 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #logging.level.org.springframework=DEBUG
 
 #spring.jpa.show-sql=true
+
 spring.jpa.hibernate.ddl-auto=update
 
-#openai.model=gpt-3.5-turbo
-#openai.api.url=https://api.openai.com/v1/chat/completions
-#openai.apiKey=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
-#openai.api.key=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
-
-youtube.api.key=AIzaSyCT-KNlw_4SLN0OrYZIT4IInNmJ_Xi4pV0
+youtube.api.key={YOUR API KEY}
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
-token.expiration.time.seconds=3600
+token.expiration.time.seconds=20
